client/src/css/main.scss
/* ... */
.menu ul li.import-link {
  p.import {
    border: 1px solid #008ED6;
    padding: 7px;
    display: inline-block;
    margin-top: 20px;
    border-radius: 5px;
    a {
      line-height: 20px;
      color: #008ED6;
    }
    &:hover, &.active {
      background: #008ED6;
      a {
        color: #fff;
      } 
    }
  }
}

.sub-nav {
  background-color: white;
  overflow: hidden;
  display: none;
  position: fixed;
  top: 80px;
  left: 0;
  right: 0;
  padding: 14px 0;
  border-bottom: 1px solid #EEE;
  top-bottom: 1px solid #EEE;
  z-index: 1000;

  li {
    float: left;
    margin-right: 1.8%;

    a {
      color: #008ed6;
      font-size: 0.75em;
    }
  }
}

.save-status-container {
  padding-top: 8px;
}

.save-status {
  overflow: hidden;
  color: #BBB;
  position: relative;
  z-index: 3;
  @include clearfix;

  i{
    display: inline-block;
    font-size: 1.4em;
    position: relative;
    top: 2px;
  }
}

.save-status {
  color: $white;
  text-align: center;
  display: none;
}

.breadcrumbs, .sub-nav {
  .inner {
    margin: 0 auto;
    padding: 0 20px 15px 20px;
    width: 980px;
    position: relative;
  }
}

.breadcrumbs {
  border-bottom: 1px solid #eee;
  padding-top: 79px;

  a.button {
    color: $lightishGrey;
    line-height: normal;
    position: absolute;
    right: 0;
    top: 12px;

    &:hover {
      color: $buttonBlue;
    }

    &:active {
      color: white;
    }
  }

  li, a {
    color: $linkBlue;
    &:hover{
      color: lighten($linkBlue, 10);
    }
  }

  ul li {
    display: inline;
    font-size: 20px;
    font-weight: lighter;
    position: relative;
    top: 4px;

    &:before {
      position: relative;
      top: 6px;
      padding: 0 10px 0 0;
      content: "\2039";
      font-size: 50px;
    }

    &.home {
      margin-left: -12px;
      border-right: 1px solid #ddd;
      padding-right: 15px;
      margin-right: 10px;
      i {
        padding-right: 10px;
      }

      &:before {
        content: "";
      }
    }
  }
}

section.section-view {
  padding: 15px 0;
  position: relative;
  margin-top: 20px;
  &:first-child {
    margin-top: -15px;
  }

  small.updated-at{
    display: none;
    color: $lightishGrey;
    position: absolute;
    left: 0;
    top: -10px;

    i{
      color: $buttonBlue;
      font-size: 1.3em;
    }
  }

  .view{
    display: none;
  }

  &:hover {
    small{
      display: block;
    }

    .view{
      display: inline-block;
    }
  }

  img{
    padding-bottom: 30px;
  }
}

.save-content {
  &:hover {
    cursor: pointer;
  }
}

.last-update {
  display: inline-block;

  p {
    color: $linkBlue;
    border: 1px solid $linkBlue;
    border-radius: 6px;
    padding: 0.15em 0.4em;
    line-height: 1.6em;
  }

  i {
    padding-right: 0.2em;
  }
}

section.report-indicator-list {
  border-bottom: 1px solid #eee;
  padding-top: .3em;
  margin-top: 1.1em;

  h3 {
    font-weight: bold;
  }

  p {
    padding: .2em 2em .2em 0;
    margin: .4em 2em .4em 0;
    line-height: 1.5em;
  }

  .section-title {
    padding-bottom: 0;
  }

  .bookmarked {
    i {
      color: $buttonBlue;
    }
  }
}

.content-sidebar, .main-content {
  float: left;
}

.main-content {
  padding: 0 20px 0 0;
  width: 650px;
}

.content-sidebar {
  width: 250px;
  padding: 0 0 0 20px;
}
/* ... */

